# git-ai-commit

./: CLAUDE.md  LICENSE  README.md  ai_commit_message.py  gcai  gcamai  install.sh  pyproject.toml
Formula/: git-ai-commit.rb
git_ai_commit/: __init__.py  cli.py  core.py
